--- a/doc/customdoxygen.css
+++ b/doc/customdoxygen.css
@@ -18,8 +18,7 @@ table{
 }
 /*
  ===========================
- */
-
+*/
 
 /* Sticky footer styles
 -------------------------------------------------- */
@@ -41,12 +40,13 @@ body {
 
 /* Set the fixed height of the footer here */
 #footer {
-    font-size: 0.9em;
+    font-size: 1.1em;
     padding: 8px 0px;
     background-color: #f5f5f5;
 }
 
 .footer-row {
+    font-size: 1.1em;
     line-height: 44px;
 }
 
@@ -368,3 +368,18 @@ span.SRScope {
 .page-header .label {
   font-size: 50%;
 }
+
+
+.textblock h1 {
+    font-size: 2.5em;
+    margin-bottom: 0.5em;
+}
+
+.textblock p, .textblock ul {
+    font-size: 1.25em;
+}
+
+#navrow1 {
+    font-size: 2.0em;
+}
+
