ok im done playing with css because it hates me

--- a/doc/customdoxygen.css
+++ b/doc/customdoxygen.css
@@ -286,10 +286,11 @@ span.SRScope {
     font-size: 2.0em;
 }
 
-img {
+/*img {
     float: right;
 }
 
 .caption {
-    float:right;
+    float: right;
 }
+*/
